Software/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
00:36:55 **** Incremental Build of configuration Debug for project atlas_haptic ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m7 -mfloat-abi=hard -mfpu=fpv5-sp-d16 -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32F746xx -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Core/Src/main.o ../Core/Src/main.c 
arm-atollic-eabi-gcc -o atlas_haptic.elf Core/Src/main.o Core/Src/stm32f7xx_hal_msp.o Core/Src/stm32f7xx_it.o Core/Src/system_stm32f7xx.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cortex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dac.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dac_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_gpio.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2c.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2c_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pcd.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pcd_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_tim.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_tim_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_uart.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.o startup/startup_stm32f746xx.o -mthumb -mcpu=cortex-m7 -mfloat-abi=hard -mfpu=fpv5-sp-d16 -T../STM32F746ZG_FLASH.ld -specs=nosys.specs -static -Wl,-Map=atlas_haptic.map -Wl,--gc-sections -Wl,--defsym=malloc_getpagesize_P=0x80 -Wl,--start-group -lc -lm -Wl,--end-group -specs=nano.specs 
/opt/Atollic_TrueSTUDIO_for_STM32_x86_64_9.0.1/ide/jre/bin/java -jar /opt/Atollic_TrueSTUDIO_for_STM32_x86_64_9.0.1/Tools/arm-atollic-reports.jar sizeinfo list atlas_haptic.elf 
Generate build reports...
Print size information
   text	   data	    bss	    dec	    hex	filename
  24464	    120	   4524	  29108	   71b4	atlas_haptic.elf
Print size information done
Generate listing file
Output sent to: atlas_haptic.list
Generate listing file done
Generate build reports done
arm-atollic-eabi-objcopy.exe -O ihex atlas_haptic.elf atlas_haptic.hex 
Cannot run program "arm-atollic-eabi-objcopy.exe": Unknown reason

Error: Program "arm-atollic-eabi-objcopy.exe" not found in PATH
PATH=[/opt/Atollic_TrueSTUDIO_for_STM32_x86_64_9.0.1/ARMTools/bin:/opt/Atollic_TrueSTUDIO_for_STM32_x86_64_9.0.1/Tools:/home/yigit/bin:/home/yigit/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin]

Info: Nothing to build for atlas_haptic
00:38:30 **** Incremental Build of configuration Debug for project atlas_haptic ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m7 -mfloat-abi=hard -mfpu=fpv5-sp-d16 -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32F746xx -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Core/Src/main.o ../Core/Src/main.c 
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:239:29: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
   HAL_UART_Transmit(&huart3,&a,1,100)
                             ^
In file included from ../Core/Inc/stm32f7xx_hal_conf.h:385:0,
                 from ../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal.h:46,
                 from ../Core/Src/main.c:41:
../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_uart.h:1137:19: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'char *'
 HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
                   ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:240:3: error: expected ';' before 'while'
   while (MPU6050_INT_State == 1)
   ^~~~~
00:38:41 **** Incremental Build of configuration Debug for project atlas_haptic ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m7 -mfloat-abi=hard -mfpu=fpv5-sp-d16 -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32F746xx -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Core/Src/main.o ../Core/Src/main.c 
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:239:29: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
   HAL_UART_Transmit(&huart3,&a,1,100);
                             ^
In file included from ../Core/Inc/stm32f7xx_hal_conf.h:385:0,
                 from ../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal.h:46,
                 from ../Core/Src/main.c:41:
../Drivers/STM32F7xx_HAL_Driver/Inc/stm32f7xx_hal_uart.h:1137:19: note: expected 'uint8_t * {aka unsigned char *}' but argument is of type 'char *'
 HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
                   ^~~~~~~~~~~~~~~~~
arm-atollic-eabi-gcc -o atlas_haptic.elf Core/Src/main.o Core/Src/stm32f7xx_hal_msp.o Core/Src/stm32f7xx_it.o Core/Src/system_stm32f7xx.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cortex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dac.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dac_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_gpio.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2c.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2c_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pcd.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pcd_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_tim.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_tim_ex.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_uart.o Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.o startup/startup_stm32f746xx.o -mthumb -mcpu=cortex-m7 -mfloat-abi=hard -mfpu=fpv5-sp-d16 -T../STM32F746ZG_FLASH.ld -specs=nosys.specs -static -Wl,-Map=atlas_haptic.map -Wl,--gc-sections -Wl,--defsym=malloc_getpagesize_P=0x80 -Wl,--start-group -lc -lm -Wl,--end-group -specs=nano.specs 
/opt/Atollic_TrueSTUDIO_for_STM32_x86_64_9.0.1/ide/jre/bin/java -jar /opt/Atollic_TrueSTUDIO_for_STM32_x86_64_9.0.1/Tools/arm-atollic-reports.jar sizeinfo list atlas_haptic.elf 
Generate build reports...
Print size information
   text	   data	    bss	    dec	    hex	filename
  24544	    120	   4524	  29188	   7204	atlas_haptic.elf
Print size information done
Generate listing file
Output sent to: atlas_haptic.list
Generate listing file done
Generate build reports done
arm-atollic-eabi-objcopy.exe -O ihex atlas_haptic.elf atlas_haptic.hex 
Cannot run program "arm-atollic-eabi-objcopy.exe": Unknown reason

Error: Program "arm-atollic-eabi-objcopy.exe" not found in PATH
PATH=[/opt/Atollic_TrueSTUDIO_for_STM32_x86_64_9.0.1/ARMTools/bin:/opt/Atollic_TrueSTUDIO_for_STM32_x86_64_9.0.1/Tools:/home/yigit/bin:/home/yigit/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin]

Info: Nothing to build for atlas_haptic
